cmake_minimum_required(VERSION 3.20)

add_subdirectory("debug")
add_subdirectory("concurrency")
add_subdirectory("core")
add_subdirectory("memory")
add_subdirectory("network")
add_subdirectory("overlays")
add_subdirectory("physics")
add_subdirectory("render")
add_subdirectory("sound")
add_subdirectory("system")
